fixed spacing under video in responsive

--- a/styles/source/_main.scss
+++ b/styles/source/_main.scss
@@ -258,6 +258,10 @@ h5 {
   padding:0;
 }
 
+.ytvideo {
+  margin-bottom: 35px;
+}
+
 /** TEAM MEMBERS **/
 .team {
   font-family: sans-serif;
